Change to Index Template

--- a/data/html/index.html
+++ b/data/html/index.html
@@ -45,26 +45,26 @@
                    <h2>PubQuiz Dashboard</h2>
                 </div>
                 <div class="row">
-                	<div class="span3 well offset1">
+                	<div class="span3 well">
                     	<ul>
-                            <li>Current # of Quizzes: </li>
-                            <li>Current # of Users: </li>
-                            <li>Current # of ...:</li>
+                            <li>Current # of Users: 32</li>
+                            <li>Current # of Questions: 11</li>
+                            <li>Current # of Answers: 17</li>
                     	</ul>
                     </div>
                     <div class="span3 well">
-                    	<ul>
-                            <li>Current # of Quizzes: </li>
-                            <li>Current # of Users: </li>
-                            <li>Current # of ...:</li>
-                    	</ul>
+                    	<h3>Scoreboard</h3>
+                    	<div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                        	<div class="bar" style="width: 60%;">
+                            </div>
+                        </div>
+                        <p>60% Have Answered Correctly.</p>
                     </div>
-                    <div class="span3 well">
-                    	<ul>
-                            <li>Current # of Quizzes: </li>
-                            <li>Current # of Users: </li>
-                            <li>Current # of ...:</li>
-                    	</ul>
+                    <div class="span4 well">
+                    	<h3>Current Question</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu nunc ac metus luctus feugiat. Nulla aliquam risus ut diam venenatis quis vehicula risus amet.</p>
+                        <p>Time Elapsed: </p>
+                        <p><a href="#">Next Question &raquo;</a></p>
                     </div>
                 </div>
             </div>
