--- a/data/html/list.html
+++ b/data/html/list.html
@@ -44,21 +44,89 @@
                 <div class="hero-unit">
                    <h2>Current Participants</h2>
                 </div>
-                <div class="span11 well">
-                	<div>
-                    	<span>Alex Bowers</span>
-                      	<span class="pull-right">
-                            <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
-                                <div class="bar" style="width: 60%;"></div>
-                            </div>
-                        	<p>60% Correct.</p>
-                        </span>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
                     </div>
+                	<p>60% Correct.</p>
                 </div>
-                <div class="row" style="min-height: 185px;">
-                	<div class="span11 well" style="min-height: 185px;">
-                    	
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
                     </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
+                </div>
+                <div class="span3 well">
+                    <h3>Alex Bowers</h3>
+                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
+                    	<div class="bar" style="width: 60%;"></div>
+                    </div>
+                	<p>60% Correct.</p>
                 </div>
             </div>
           </body>
