--- a/data/html/list.html
+++ b/data/html/list.html
@@ -11,6 +11,41 @@
         <script src="../js/bootstrap-collapse.js"></script>
         <script src="../js/bootstrap-transition.js"></script>
         <script src="../js/bootstrap-alert.js"></script>
+        <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    	<script type="text/javascript">
+			google.load('visualization', '1.0', {'packages':['corechart']});
+
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.setOnLoadCallback(drawChart);
+
+      // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+      function drawChart() {
+
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Questions');
+        data.addColumn('number', '');
+        data.addRows([
+          ['Mushrooms', 99],
+          ['Onions', 1],
+          ['Olives', 1],
+          ['Zucchini', 1],
+          ['Pepperoni', 2]
+        ]);
+
+        // Set chart options
+        var options = {'title':'Accuracy of Answers',
+                       'width':400,
+                       'height':300,
+					   'backgroundColor': { 'fill' : '#f5f5f5'}};
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+		</script>
 	</head>
     <body>
     <div class="navbar navbar-fixed-top">
@@ -44,11 +79,9 @@
                 <div class="hero-unit">
                    <h2>Current Participants</h2>
                 </div>
-                <div class="span3 well">
+                <div class="span5 well">
                     <h3>Alex Bowers</h3>
-                    <div class="progress progress-success" style="background-image: none; background-color: #ee5f5b;">
-                    	<div class="bar" style="width: 60%;"></div>
-                    </div>
+                    <div id="chart_div"></div>
                 	<p>60% Correct.</p>
                 </div>
                 <div class="span3 well">
