Save questions and answers

--- a/data/html/add.html
+++ b/data/html/add.html
@@ -49,10 +49,10 @@
                     	<form action="#" method="post">
                         <div class="questionarea">
                         <h3>Enter question text</h3><hr />
-                        	<input type="text" class="countChars" rel="question" placeholder="Enter question here.." style="margin: 0 auto; width:1060px;" maxlength="160"/>
+                        	<input type="text" class="countChars" rel="question" placeholder="Enter question here.." style="margin: 0 auto; width:1060px;" maxlength="160" name="questions[]" />
                             <p class="pull-right"><span class="questionCharsLeft">160</span> Characters Left</p><br /><br />
                         <h3>Enter Correct Answer</h3><hr />
-                        	<input type="text" class="countChars" rel="answer" placeholder="Enter answer here.." style="margin: 0 auto; width:1060px;" maxlength="160"/>
+                        	<input type="text" class="countChars" rel="answer" placeholder="Enter answer here.." style="margin: 0 auto; width:1060px;" maxlength="160" name="answers[]"/>
                             <p class="pull-right"><span class="answerCharsLeft">160</span> Characters Left</p>
                            </div>
                            
